# Python-Template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint.yml  pytest-main.yml  test.yml
tests/: test_main.py
