[project]
name = "Python-Template"
authors = [
    { name = "Flyingfoxi", email = "155773317+Flyingfoxi@users.noreply.github.com" },
]
description = "A Template for Python Repository's "
version = "v1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest~=8.3.4", "coverage~=7.8.0"]

dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.11.0",
    "mypy~=1.15.0",
    "pytest~=8.3.4"
]


[tool.mypy]
strict = true
mypy_path = ["src", "tests"]
exclude = [".venv", "venv"]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
]

[tool.ruff.format]
quote-style = "double"

[tool.isort]
profile = "black"


[tool.coverage.run]
source = [
    "tests",
    "src"
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
